fix south africa capital overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,7 @@ h1 {
   margin-bottom: 150px;
   text-align: center;
   max-width: 90%;
+  overflow-wrap: break-word;
 }
 
 /*============= start screen =============*/
